# nyaa-scraper

./: Cargo.toml  README.md  config.example.toml
src/: config.rs  main.rs
