[package]
name = "nyaa_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"
tokio = { features = ["full"], version = "1.13.0" }
rss = "2.0"
chrono = "0.4.19"
